--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 @import "tailwindcss";
-/* index.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* Optional: Custom styles */
-body {
-  font-family: 'Inter', sans-serif;
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
